[Add] file style.css for the styles of the index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <form>
-    <label for="">
+  <form class="form">
+    <label for="name-input">
       <span>Tu nombre</span>
       <input type="text" class="input" id="name-input" placeholder="Ingresa tu nombre">
     </label>
