[Add] main.js file to say hello

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </label>
     <button class="button" id="saludar-btn">Saludame</button>
   </form>
+  <script src="main.js"></script>
 </body>
 
 </html>
