--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  <form class="form">
+  <div class="box">
     <label for="name-input">
       <span>Tu nombre</span>
       <input type="text" class="input" id="name-input" placeholder="Ingresa tu nombre">
     </label>
     <button class="button" id="saludar-btn">Saludame</button>
-  </form>
+  </div>
   <script src="main.js"></script>
 </body>
 
