--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="box">
     <label for="name-input">
       <span>Tu nombre</span>
-      <input type="text" class="input" id="name-input" placeholder="Ingresa tu nombre">
+      <input type="text" class="input" id="name-input" autofocus placeholder="Ingresa tu nombre">
     </label>
     <button class="button" id="saludar-btn">Saludame</button>
   </div>
